# ros-tictactoe-ur

./: .gitignore  README.md  requirements.txt
Arduino/servoControl/: servoControl.ino
Arduino/servoCycle/: servoCycle.ino
local/: calibrate.sh  cartesian_goal.sh  fake_ros2_driver.sh  joint_goal.sh  moveit.sh  realsense.sh  static_transform.sh  teensy.sh  ur_ros2_driver.sh  ursim.sh
src/brain/: package.xml  setup.py
src/brain/brain/: brain_node.py  human_vs_robot.py  keyboard_node.py  old_brain_node.py  robot_vs_robot.py  tictactoe2_node.py  tictactoe_node.py  ui_mode.py  vision_mode.py
src/brain/config/: robot2_calib.yaml  robot3_calib.yaml  robot4_calib.yaml  robot5_calib.yaml  robot6_calib.yaml
src/brain/launch/: tictactoe.launch.py
src/brain/models/: menace_agent_o.npy  menace_agent_x.npy
src/brain/rviz/: tictactoe.rviz
src/brain/scripts/: train_menace.py
src/end_effector/: CMakeLists.txt  package.xml  setup.py
src/end_effector/meshes/: end_effector_dual.STL
src/end_effector/urdf/: pen_holder.xacro  ur5e.urdf.xacro  ur_with_end_effector.xacro  ur_with_pen_holder.xacro
src/helper/: CMakeLists.txt  package.xml
src/helper/action/: DrawShape.action  EraseGrid.action
src/helper/msg/: CellPoseArray.msg  GridPose.msg
src/helper/srv/: MoveRequest.srv
src/manipulation/: CMakeLists.txt  package.xml
src/manipulation/src/: moveit_server.cpp  static_transform.cpp
src/perception/: package.xml  setup.py
src/perception/launch/: perception.launch.py
src/perception/meshes/: o.STL  o.stl  x.STL  x.stl
src/perception/perception/: aruco_vision.py  camera.py  cell_vision.py  grid_detector.py  grid_vision.py  grid_vision2.py  publish_grid_pose.py
tmp/: message.txt
