<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulation</name>
  <version>0.0.0</version>
  <description>MoveIt path planning server</description>
  <maintainer email="z5311131@ad.unsw.edu.au">blink</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ur_robot_driver</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>helper</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
